[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/gamemap/BackgroundMaterial.tres" type="Material" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gamemap/game_map.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scenes/game_over_menu/GameOverMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/intro_screen/IntroScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/reference/arrow.png" type="Texture" id=7]
[ext_resource path="res://scenes/game_hud/game_hud.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/pause_menu/PauseMenu.tscn" type="PackedScene" id=9]

[node name="GameMap" type="Node2D"]
script = ExtResource( 3 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( 0, 0.0469055 )
texture = ExtResource( 7 )
offset = Vector2( 500, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="camera" type="Camera2D" parent="Player"]
scale = Vector2( 2, 2 )
current = true

[node name="background" type="Sprite" parent="."]
material = ExtResource( 1 )
scale = Vector2( 40, 20 )
z_index = -3
z_as_relative = false
texture = ExtResource( 4 )

[node name="rocks" type="Node2D" parent="."]

[node name="floaters" type="Node2D" parent="."]

[node name="IntroTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 3.0
one_shot = true

[node name="EndMenu" parent="." instance=ExtResource( 5 )]

[node name="IntroScreen" parent="." instance=ExtResource( 6 )]

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="PauseMenu" parent="." instance=ExtResource( 9 )]
